Fix: from general overflow to overflow-x

--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ html {
 
 body {
     min-height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
 
     max-width: 1440px;
     min-width: 375px;
